--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
+
   <div id="container">
-    <aside id="top-left"><h2>Slay the ogre</h2></aside>
+    <aside id="top-left"><h2>Get to the finish!</h2></aside>
     <aside id="top-right"><h2 id="movement"></h2></aside>
     <main>
         <canvas id="canvas"><!-- play it, a game --></canvas>
     </main>
     <aside id="btm-left"><h2>100</h2></aside>
-    <aside id="btm-right"><h2 id="status">play the game</h2></aside>
+    <aside id="btm-right"><h2 id="status">Eat food to score</h2></aside>
   </div>
   <script src="js/main.js"></script>
 </body>
