--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
 
 
-
   <div id="container">
     <aside id="top-left"><h2>Get to the finish!</h2></aside>
-    <aside id="top-right"><h2 id="movement"></h2></aside>
+    <aside id="top-right"><h2 id="movement">I'm hungry</h2></aside>
     <main>
         <canvas id="canvas"><!-- play it, a game --></canvas>
     </main>
-    <aside id="btm-left"><h2>100</h2></aside>
+    <aside id="btm-left"><h2 id="score"></h2></aside>
     <aside id="btm-right"><h2 id="status">Eat food to score</h2></aside>
   </div>
   <script src="js/main.js"></script>
