--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Canvas Crawler</title>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <aside id="top-left"><h2>Get to the finish!</h2></aside>
     <aside id="top-right"><h2 id="movement">I'm hungry</h2></aside>
     <main>
-        <canvas id="canvas"><!-- play it, a game --></canvas>
+        <canvas id="canvas"></canvas>
     </main>
     <aside id="btm-left"><h2 id="score"></h2></aside>
     <aside id="btm-right"><h2 id="status">Eat food to score</h2></aside>
