--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Canvas Crawler</title>
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <title>Dragon Flight</title>
+  <link href='https://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet'>
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -13,13 +13,13 @@
 
 
   <div id="container">
-    <aside id="top-left"><h2>Get to the finish!</h2></aside>
+    <aside id="top-left"><h2>Get to the finish <h2></aside>
     <aside id="top-right"><h2 id="movement">I'm hungry</h2></aside>
     <main>
         <canvas id="canvas"></canvas>
     </main>
     <aside id="btm-left"><h2 id="score"></h2></aside>
-    <aside id="btm-right"><h2 id="status">Eat food to score</h2></aside>
+    <aside id="btm-right"><h2 id="status">Eat food to score </h2></aside>
   </div>
   <script src="js/main.js"></script>
 </body>
