--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dragon Flight</title>
   <link href='https://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet'>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -21,6 +21,6 @@
     <aside id="btm-left"><h2 id="score"></h2></aside>
     <aside id="btm-right"><h2 id="status">Eat food to score </h2></aside>
   </div>
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
