--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dragon Flight</title>
   <link href='https://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet'>
+
+
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -19,7 +21,7 @@
         <canvas id="canvas"></canvas>
     </main>
     <aside id="btm-left"><h2 id="score"></h2></aside>
-    <aside id="btm-right"><h2 id="status">Eat food to score </h2></aside>
+    <aside id="btm-right"><h2 id="status"> Reset </h2></aside>
   </div>
   <script src="./js/main.js"></script>
 </body>
